--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,7 @@
 <h1>説明ページです</h1>
 
 <h1>タスク引き受けアプリケーション</h1>
+<a href="/">Leave it.</a>
+<a href="/about">Leave it.とは</a>
 <h2>タスクを共有して、他の人にやってもらえる！</h2>
 <h2>ex) 学生のノート写し、Excel作成、調べ物、etc...</h2>
